--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,19 @@
 <!-- Background image -->
-   <div class="container-sm"  id="intro">
-<br>
-<h1 class="display-1">Penny's Coffe</h1><br><br>
-     <form>
-  <input class="form-control form-control-lg" type="text" placeholder="Enter your name here" aria-label=".form-control-lg example" id="forms">
+<div class="container-fluid" id="intro">
+  <br>
 
-    
-    </form><br><br>
+  <div class="container-sm" style="border: 5px solid rgb(63, 4, 63);padding: 10px;">
+    <h1 class="display-1">Penny's Coffe</h1><br>
+    <form action="/waiters" method="POST">
+      <input class="form-control form-control-lg" type="text" placeholder="Enter your name here"
+        aria-label=".form-control-lg example" id="forms" name="inputName">
 
-    <h3>Days Available</h3><br>
- 
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-  <label class="form-check-label" id="check" for="inlineCheckbox1">Monday</label>
-</div>
 
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-  <label class="form-check-label" for="inlineCheckbox2">Tuesday</label>
-</div>
+      <br>
 
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-  <label class="form-check-label" for="inlineCheckbox3">Wednesday</label>
-</div>
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option4">
-  <label class="form-check-label" for="inlineCheckbox1">Thursday</label>
-</div>
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option5">
-  <label class="form-check-label" for="inlineCheckbox2">Friday</label>
-</div>
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option6">
-  <label class="form-check-label-bg" for="inlineCheckbox3">Saturday</label>
-</div>
+      <button type="submit" class="btn btn-primary btn-lg">Login</button>
+    </form>
+  </div>
 
-<div class="form-check form-check-inline">
-  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option6">
-  <label class="form-check-label" for="inlineCheckbox3">Sunday</label>
-</div>
-<br><br>
 
-<button type="button" class="btn btn-primary btn-lg">Submit</button>
 </div>
