--- a/public/css/waiters.css
+++ b/public/css/waiters.css
@@ -12,7 +12,7 @@
     font-style:oblique;
     text-align: center;
     font-weight: bolder;
-    color: rgb(63, 4, 63);
+    color:#654321;
   }
 
   h2{
@@ -26,7 +26,11 @@
 
  h3{
    text-align: center;
-  color: rgb(63, 4, 63);
+  color: #654321;
+ }
+
+ #checkRow{
+   margin-left: 25%;
  }
 
  .btn{
@@ -35,7 +39,7 @@
  }
 
  #update{
-   margin-left: 85%;
+   margin-left: 0%;
  }
  #check{
    font-size: medium;
