--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,16 +2,16 @@
 <div class="container-fluid" id="intro">
   <br>
 
-  <div class="container-sm" style="border: 5px solid rgb(63, 4, 63);padding: 10px;">
+  <div class="container-sm" style="border: 5px solid #654321;padding: 10px;background-color:rgb(250, 243, 243);">
     <h1 class="display-1">Penny's Coffe</h1><br>
-    <form action="/waiters" method="POST">
+    <form action="/" method="POST">
       <input class="form-control form-control-lg" type="text" placeholder="Enter your name here"
         aria-label=".form-control-lg example" id="forms" name="inputName">
 
 
       <br>
 
-      <button type="submit" class="btn btn-primary btn-lg">Login</button>
+      <button type="submit" class="btn btn-lg" style="background-color: #e0964d;">Login</button>
     </form>
   </div>
 
