referencing foreign keys

--- a/views/days.handlebars
+++ b/views/days.handlebars
@@ -3,9 +3,9 @@
 <br>
 
 <div class="container-sm" style="border: 5px solid #654321;padding: 10px;background-color:rgb(250, 243, 243);">
-<h1 class="display-1">Penny's Coffe</h1><br>
+<h1 class="display-1">Penny's Coffee</h1><br>
      
- <h4>Waiter:{{name}} </h4>
+ <h4>Waiter: {{name}} </h4>
  
 
 
