--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -3,7 +3,7 @@
 <br>
 
 <div class="container-sm" style="border: 5px solid #654321;padding: 10px;background-color:rgb(250, 243, 243);">
-<h1 class="display-1">Penny's Coffe</h1><br>
+<h1 class="display-1">Penny's Coffee</h1><br>
 
 <table class="table">
   <thead>
@@ -17,9 +17,10 @@
          <th scope="col">Sunday</th>
     </tr>
   </thead>
+   
   <tbody>
-    {{!-- <tr>
-      <th scope="row"></th>
+    
+      {{!-- <th scope="row"></th>
       <td></td>
       <td></td>
       <td></td>
@@ -34,10 +35,17 @@
       <th scope="row"></th>
       <td></td>
       <td></td>
-      <td></td> --}}
-    </tr>
+      <td></td> --} --}}
   </tbody>
-     
-
+   
+</table>
+<br>
+<form  action="/waiters/admin" method="POST">
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group mr-2" role="group" aria-label="First group" style="margin-left: 40%;">
+  
+    <button type="submit" class="btn  btn-lg" id="update" style="background-color: #e0964d;">Reset</button>
+    </form>
+  </div>
 </div> 
 </div>
