--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     <h1 class="display-1">Penny's Coffe</h1><br>
     <form action="/" method="POST">
       <input class="form-control form-control-lg" type="text" placeholder="Enter your name here"
-        aria-label=".form-control-lg example" id="forms" name="inputName">
+        aria-label=".form-control-lg example" id="forms" name="inputName" pattern="[a-zA-Z]*">
 
 
       <br>
