--- a/views/days.handlebars
+++ b/views/days.handlebars
@@ -10,7 +10,7 @@
 
 
      <h3>Days Available</h3><br>
- <form action="/{{name}}" method="POST">
+ <form action="/waiters/{{name}}" method="POST">
  
 <h5 class="success">{{messages.success}} </h5>
 <h5 class="errors">{{messages.errors}} </h5>
