--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -54,7 +54,7 @@
     </table>
     <h3>{{messages.reset}}</h3>
     <br>
-    <form action="/waiters/admin" method="POST">
+    <form action="/admin" method="POST">
       <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group mr-2" role="group" aria-label="First group" style="margin-left: 40%;">
 
